objects/InnovadexData1__InnovadexTemporary__c.object
<CustomObject>
    <fields>
        <fullName>InnovadexData1__ActivityDate__c</fullName>
        <label>ActivityDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ActivityTypeId__c</fullName>
        <label>ActivityTypeId</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ActivityType__c</fullName>
        <label>ActivityType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__AddressLine1__c</fullName>
        <label>AddressLine1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Application__c</fullName>
        <label>Application</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__BusinessType__c</fullName>
        <label>BusinessType</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__City__c</fullName>
        <label>City</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Company__c</fullName>
        <label>Company</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ContactByEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContactByEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ContactByPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContactByPhone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Country__c</fullName>
        <label>Country</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__DateTimeStamp__c</fullName>
        <label>DateTimeStamp</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__DecisionMakerRole__c</fullName>
        <label>DecisionMakerRole</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__DecisionTimeFrame__c</fullName>
        <label>DecisionTimeFrame</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Department__c</fullName>
        <label>Department</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__DocumentActivityDetail__c</fullName>
        <label>DocumentActivityDetail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__DocumentTitle__c</fullName>
        <label>DocumentTitle</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__DocumentType__c</fullName>
        <label>DocumentType</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__FirstName__c</fullName>
        <label>FirstName</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__HitType__c</fullName>
        <label>HitType</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Industry__c</fullName>
        <label>Industry</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__InnovadexID__c</fullName>
        <label>InnovadexID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InnovadexData1__IsSample__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__LastName__c</fullName>
        <label>Last Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Origin__c</fullName>
        <label>Origin</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__PhoneExt__c</fullName>
        <label>PhoneExt</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Phone__c</fullName>
        <label>Phone</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__PotentialAnnualUsage__c</fullName>
        <label>PotentialAnnualUsage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ProductType__c</fullName>
        <label>ProductType</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Product__c</fullName>
        <label>Product</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ProfessionalTitle__c</fullName>
        <label>ProfessionalTitle</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ProjectApplication__c</fullName>
        <label>ProjectApplication</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Region__c</fullName>
        <label>Region</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Request_Type__c</fullName>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Salutation__c</fullName>
        <label>Salutation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__SampleSize__c</fullName>
        <label>SampleSize</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__SearchCriteria__c</fullName>
        <label>SearchCriteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__SenderEmail__c</fullName>
        <label>SenderEmail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__SenderFirstName__c</fullName>
        <label>SenderFirstName</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__SenderLastName__c</fullName>
        <label>SenderLastName</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__SenderUserId__c</fullName>
        <label>SenderUserId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ShippingMethod__c</fullName>
        <label>ShippingMethod</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ShowName__c</fullName>
        <label>ShowName</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__StateProvince__c</fullName>
        <label>StateProvince</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__SupplierSupport__c</fullName>
        <label>SupplierSupport</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__UserId__c</fullName>
        <label>UserId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__VolumeOfBusiness__c</fullName>
        <label>VolumeOfBusiness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Website__c</fullName>
        <label>Website</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>